Changes made to aboutUS, Home Page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,155 @@
-<p>about-us works!</p>
+<div class="about-post-content max-width-2 m-auto max-width-1">
+    <br>
+    <h1 class="about-title text-center" style="font-weight: bold;">Who we are?</h1>
+    <br>
+    <p id="first-para" class="text-center">MUCH OBLIGED FOR SETTING ASIDE THE EFFORT TO DISCOVER INCREASINGLY "ABOUT
+        US."</p>
+    <br>
+    <p id="first-para" class="text-center">
+        Eventful has all the gathering supplies you need, across the board place,
+        throughout the entire year. For birthday celebrations, commemorations, retirement, infant shower, lone rangeress
+        parties, retirement, occasion gatherings, merriments and past, regardless of what you're celebrating. Our online
+        gateway has all that you would ever need when you're arranging the best party ever. The straightforwardness and
+        accommodation of the site make arranging and looking for your gathering supplies best! With a large number of
+        the best party supplies for all ages and events, alongside customized choices accessible with us Eventful
+        is the spot to be in.
+        <br><br>
+    </p>
+</div>
+<div class="about-post-content max-width-2 m-auto max-width-1">
+    <br>
+    <h1 class="about-title text-center" style="font-weight: bold;">Why Eventful?</h1>
+    <br>
+    <p id="first-para" class="text-center">
+        Numerous individuals avoid party supplies on account of the recognition that gathering supplies are excessively
+        costly. Actually excellent financially savvy party supplies are accessible - you simply need to do the clicking
+        and visit us. We will probably assist individuals with commending their extraordinary
+        events in style; with their friends and family. We need to spare our clients the issue of heading to stores to
+        finish a youngster or grown-up's birthday celebration subject or some other extraordinary event.
+        <br><br>
+        Our point is to constantly search for new and interesting items to offer our clients. We convey our own whole
+        stock, so clients don't need to stress over putting in a raincheck or long fringe delays.
+        <br><br>
+        We're focused on extraordinary client support offering simple requesting, rapid conveyance, and no-bother
+        merchandise exchanges.
+        <br>
+        Commend your extraordinary events in style as a festival is only a tick away with Theme My Party!
+    </p>
+    <br>
+    <p class="text-center fst-italic">Celebrations are just a click away</p>
+    <br>
+</div>
+<br><br>
+
+
+
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="cards-wrapper">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card d-none d-md-block">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card d-none d-md-block">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    </div>
+    <div class="carousel-item">
+      <div class="cards-wrapper">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card d-none d-md-block">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card d-none d-md-block">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="cards-wrapper">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card d-none d-md-block">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card d-none d-md-block">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
