Added many angular components

--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -7,33 +7,96 @@
     max-width: 80vw;
 }
 
+.color-text{
+  color:rgb(47,104,104);
+}
 
+.card{
+  padding: 0;
+}
 
-.cards-wrapper {
+.card img {
+  width: 100%;
+  height: 60vh;
+  object-fit: cover;
+  display: block;
+  position: relative;
+}
+
+.card :hover{
+  cursor: pointer;
+  box-shadow: 0 70px 70px rgba(0, 0, 0, .12), 0 70px 70px rgba(0, 0, 0, .06);
+  transform: scale(1.1);
+}
+
+.main{
+  width: 100%;
+  height: 40vh;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
-.card img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.card {
-  margin: 0 0.5em;
-  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-  border: none;
-  border-radius: 0;
-}
-.carousel-inner {
-  padding: 1em;
-}
-
-.carousel-control-prev,
-.carousel-control-next {
-  background-color: #e1e1e1;
-  width: 5vh;
-  height: 5vh;
+.profile-card{
+  position: relative;
+  font-family: sans-serif;
+  width: 220px;
+  height: 220px;
+  background: #fff;
+  padding: 30px;
   border-radius: 50%;
-  top: 50%;
-  transform: translateY(-50%);
+  box-shadow: 0 0 22px #33333366;
+  transition: .6s;
+  margin: 0 25px;
+}
+.profile-card:hover{
+  border-radius: 10px;
+  height: 260px;
+}
+.profile-card .img{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: .6s;
+  z-index: 99;
+}
+.profile-card:hover .img{
+  transform: translateY(-60px);
+}
+.img img{
+  width: 100%;
+  /* height: 100%; */
+  border-radius: 20%;
+  box-shadow: 0 0 22px #3336;
+  transition: .6s;
+}
+.profile-card:hover img{
+  border-radius: 10px;
+}
+.caption{
+  text-align: center;
+  transform: translateY(-80px);
+  opacity: 0;
+  transition: .6s;
+}
+.profile-card:hover .caption{
+  opacity: 1;
+}
+.caption h3{
+  font-size: 21px;
+  font-family: sans-serif;
+}
+.caption p{
+  font-size: 15px;
+  color: #0c52a1;
+  font-family: sans-serif;
+  margin: 2px 0 9px 0;
+}
+.caption .social-links a{
+  color: #333;
+  margin-right: 15px;
+  font-size: 21px;
+  transition: .6s;
+}
+.social-links a:hover{
+  color: #0c52a1;
 }
