--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,24 +2,24 @@
 
 <nav class="navbar navbar-dark bg-dark">
   <div class="container">
-    <ul class="nav nav-pills">
-      <li class="nav-item">
-        <a class="nav-link fs-6 fw-bolder" routerLinkActive="active" routerLink="/Services">Home</a>
+    <ul class="nav ">
+      <li class="nav-item nav-pills-color">
+        <a class="nav-link fs-6 fw-bolder color-text" routerLinkActive="active" routerLink="/Services">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link fs-6 fw-bolder" routerLinkActive="active" routerLink="/About">About Us</a>
+      <li class="nav-item nav-pills-color">
+        <a class="nav-link fs-6 fw-bolder color-text" routerLinkActive="active" routerLink="/About">About Us</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link fs-6 fw-bolder" routerLinkActive="active" routerLink="/Contact">Costumer Support</a>
+      <li class="nav-item nav-pills-color">
+        <a class="nav-link fs-6 fw-bolder color-text" routerLinkActive="active" routerLink="/Contact">Customer Support</a>
       </li>
 
-      <a routerLinkActive="active" routerLink="/Services"><img src="https://static1.squarespace.com/static/5494b2e0e4b04c9ad8411130/t/54a075b5e4b0df76872502a5/1419802040667/Final_Hi_Res.jpg?format=1500w" style="height:30px; width:60px; margin-left: 10rem; margin-right: 10rem; margin-top: 8px;" alt="Logo"></a>
-
-      <li class="nav-item">
-        <a class="nav-link fa fa-shopping-cart aria-hidden='true' fs-6 fw-bolder" style="margin-top: 3px;" routerLinkActive="active" routerLink="/Cart">&nbsp; Cart</a>
+      <a  routerLinkActive="active" routerLink="/Services"><img src="https://static1.squarespace.com/static/5494b2e0e4b04c9ad8411130/t/54a075b5e4b0df76872502a5/1419802040667/Final_Hi_Res.jpg?format=1500w" style="height:30px; width:60px; margin-left: 10rem; margin-right: 10rem; margin-top: 8px;" alt="Logo"></a>
+      
+      <li class="nav-item nav-pills-color">
+        <a class="color-text nav-link fs-6 fw-bolder" routerLinkActive="active" routerLink="/BookAppointment">Book Appointment</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link fs-6 fw-bolder" routerLinkActive="active" routerLink="/BookAppointment">Book Appointment</a>
+      <li class="nav-item nav-pills-color">
+        <a class="color-text nav-link fa fa-shopping-cart fs-6 fw-bolder" style="margin-top: 3px;" routerLinkActive="active" routerLink="/Cart">&nbsp; Cart</a>
       </li>
     </ul>
   </div>
@@ -29,30 +29,27 @@
     <router-outlet>
 </router-outlet>
 
-
-
-<br><br>
 <div>
-  <footer class="bg-dark text-center text-white">
+  <footer class="bg-dark text-center">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
-      <section class="mb-4">
+      <section class="mb-4 nav-pills-color">
 
         <!-- Facebook -->
-        <a class="btn btn-light btn-floating m-1"  href="www.facebook.com" role="button"><i
+        <a class="btn btn-light btn-floating m-1 color-text"  href="www.facebook.com" role="button"><i
             class="fa fa-facebook-f"></i></a>
 
         <!-- Twitter -->
-        <a class="btn btn-light btn-floating m-1"  href="www.twitter.com" role="button"><i
+        <a class="btn btn-light btn-floating m-1 color-text"  href="www.twitter.com" role="button"><i
             class="fa fa-twitter"></i></a>
 
         <!-- Instagram -->
-        <a class="btn btn-light btn-floating m-1"  href="www.instagram.com" role="button"><i
+        <a class="btn btn-light btn-floating m-1 color-text"  href="www.instagram.com" role="button"><i
             class="fa fa-instagram"></i></a>
 
         <!-- Linkedin -->
-        <a class="btn btn-light btn-floating m-1"  href="www.linkedin.com" role="button"><i
+        <a class="btn btn-light btn-floating m-1 color-text"  href="www.linkedin.com" role="button"><i
             class="fa fa-linkedin"></i></a>
 
       </section>
@@ -61,9 +58,9 @@
     <!-- Grid container -->
 
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center p-3 color-text" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
-      <a class="text-white fst-italic text-decoration-none" href="https://mdbootstrap.com/">Eventful</a>
+      <a class="color-text fst-italic text-decoration-none" href="">Eventful</a>
       <br>
     </div>
     <!-- Copyright -->
