--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -7,24 +7,26 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../assets/wedding6.jpg" class="d-block w-100" alt="...">
+      <img src="../assets/wedding4.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h5>Whether it’s a wedding or night out, we can help you create the perfect event. You won’t be disappointed.
+        </h5>
+
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../assets/wedding4.png" class="d-block w-100" alt="...">
+      <img src="https://cdn.shopify.com/s/files/1/1832/6341/collections/girl-main_1200x.jpg?v=1675808891"
+        class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h5>We believe everyone deserves the best party. Wherever you are, whatever you’re doing – celebrate with us.
+        </h5>
       </div>
     </div>
     <div class="carousel-item">
       <img src="../assets/bday12.jpeg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5 class="text-light">Event decor is the key to your party’s success. <br> The more interesting and creative, the
+          better your guests will remember it.</h5>
       </div>
     </div>
   </div>
@@ -36,6 +38,38 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+</div>
+
+<div class="about-post-content max-width-2 m-auto max-width-1">
+
+  <br>
+  <p id="first-para" class="text-center">
+    Eventful has all the gathering supplies you need, across the board place,
+    throughout the entire year. For birthday celebrations, commemorations, retirement, infant shower, lone rangeress
+    parties, retirement, occasion gatherings, merriments and past, regardless of what you're celebrating. Our online
+    gateway has all that you would ever need when you're arranging the best party ever. The straightforwardness and
+    accommodation of the site make arranging and looking for your gathering supplies best! With a large number of
+    the best party supplies for all ages and events, alongside customized choices accessible with us Eventful
+    is the spot to be in.
+    <br><br>
+  </p>
+</div>
+
+<div class="container shadow min-vh-40 py-4">
+  <div class="row">
+    <div class="col-md-5 mx-auto">
+      <div class="small fw-light">&nbsp;Search Your city here </div>
+      <div class="input-group">
+        <input class="form-control border-end-0 border rounded-pill" type="search" 
+          id="example-search-input" placeholder="search">
+        <span class="input-group-append"> &nbsp;&nbsp;
+          <button class="btn bg-white border-bottom-0 border rounded-pill ms-n5" type="button">
+            <i class="fa fa-search"></i>
+          </button>
+        </span>
+      </div>
+    </div>
+  </div>
 </div>
 
 
