--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,155 +1,151 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="about-post-content max-width-2 m-auto max-width-1">
+  <br>
+  <h1 class="color-text about-title text-center" style="font-weight: bold;">Why Eventful?</h1>
+  <br>
+  <p id="first-para" class="text-center">
+    Numerous individuals avoid party supplies on account of the recognition that gathering supplies are excessively
+    costly. Actually excellent financially savvy party supplies are accessible - you simply need to do the clicking
+    and visit us. We will probably assist individuals with commending their extraordinary
+    events in style; with their friends and family. We need to spare our clients the issue of heading to stores to
+    finish a youngster or grown-up's birthday celebration subject or some other extraordinary event.
+    <br><br>
+    Our point is to constantly search for new and interesting items to offer our clients. We convey our own whole
+    stock, so clients don't need to stress over putting in a raincheck or long fringe delays.
+    <br><br>
+    We're focused on extraordinary client support offering simple requesting, rapid conveyance, and no-bother
+    merchandise exchanges.
     <br>
-    <h1 class="about-title text-center" style="font-weight: bold;">Who we are?</h1>
-    <br>
-    <p id="first-para" class="text-center">MUCH OBLIGED FOR SETTING ASIDE THE EFFORT TO DISCOVER INCREASINGLY "ABOUT
-        US."</p>
-    <br>
-    <p id="first-para" class="text-center">
-        Eventful has all the gathering supplies you need, across the board place,
-        throughout the entire year. For birthday celebrations, commemorations, retirement, infant shower, lone rangeress
-        parties, retirement, occasion gatherings, merriments and past, regardless of what you're celebrating. Our online
-        gateway has all that you would ever need when you're arranging the best party ever. The straightforwardness and
-        accommodation of the site make arranging and looking for your gathering supplies best! With a large number of
-        the best party supplies for all ages and events, alongside customized choices accessible with us Eventful
-        is the spot to be in.
-        <br><br>
-    </p>
+    Commend your extraordinary events in style as a festival is only a tick away with Theme My Party!
+  </p>
+  <br><br>
+  <h2 class="color-text about-title text-center" style="font-weight: bold;">Past Successful Events</h2>
+  <p class="color-text text-center fst-italic">Celebrations are just a click away</p>
+  <br>
 </div>
-<div class="about-post-content max-width-2 m-auto max-width-1">
-    <br>
-    <h1 class="about-title text-center" style="font-weight: bold;">Why Eventful?</h1>
-    <br>
-    <p id="first-para" class="text-center">
-        Numerous individuals avoid party supplies on account of the recognition that gathering supplies are excessively
-        costly. Actually excellent financially savvy party supplies are accessible - you simply need to do the clicking
-        and visit us. We will probably assist individuals with commending their extraordinary
-        events in style; with their friends and family. We need to spare our clients the issue of heading to stores to
-        finish a youngster or grown-up's birthday celebration subject or some other extraordinary event.
-        <br><br>
-        Our point is to constantly search for new and interesting items to offer our clients. We convey our own whole
-        stock, so clients don't need to stress over putting in a raincheck or long fringe delays.
-        <br><br>
-        We're focused on extraordinary client support offering simple requesting, rapid conveyance, and no-bother
-        merchandise exchanges.
-        <br>
-        Commend your extraordinary events in style as a festival is only a tick away with Theme My Party!
-    </p>
-    <br>
-    <p class="text-center fst-italic">Celebrations are just a click away</p>
-    <br>
-</div>
-<br><br>
 
 
 
-
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <div class="cards-wrapper">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card-wrapper container-sm d-flex  justify-content-around">
+        <div class="card" style="width: 18rem;">
+          <img src="https://deowgxgt4vwfe.cloudfront.net/uploads/1566296228_large.jpg" class="card-img-top"
+            class="card-img-top" alt="...">
+
         </div>
-      </div>
-      <div class="card d-none d-md-block">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="card" style="width: 18rem;">
+          <img src="https://deowgxgt4vwfe.cloudfront.net/uploads/1648624953_original.jpg" class="card-img-top"
+            alt="...">
+
         </div>
-      </div>
-      <div class="card d-none d-md-block">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    </div>
-    <div class="carousel-item">
-      <div class="cards-wrapper">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <div class="card d-none d-md-block">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <div class="card d-none d-md-block">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+        <div class="card" style="width: 18rem;">
+          <img
+            src="https://1.bp.blogspot.com/-Ubg4oQjOnz0/XcNfqa-4CaI/AAAAAAAAfm8/GbOIfvLZ2P0fZViFfwc6dypajMnY0zcfgCEwYBhgL/s1600/serving%2Btable%2Bvertical.jpg"
+            class="card-img-top" class="card-img-top" alt="...">
+
         </div>
       </div>
     </div>
     <div class="carousel-item">
-      <div class="cards-wrapper">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+      <div class="card-wrapper container-sm d-flex   justify-content-around">
+        <div class="card  " style="width: 18rem;">
+          <img
+            src="https://1.bp.blogspot.com/-EHoam_ejpYE/XcNfpa10wfI/AAAAAAAAfnA/Vt6fcpISwj0yDBsy3pj7YXQ5AW5XjdpxwCEwYBhgL/s1600/full%2Broom%2Bfrom%2Bback.jpg"
+            class="card-img-top" class="card-img-top" alt="...">
+
         </div>
-        <div class="card d-none d-md-block">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+        <div class="card" style="width: 18rem;">
+          <img
+            src="https://5.imimg.com/data5/SELLER/Default/2021/2/WN/WX/ET/123603078/25b6a1c8-e6ff-4b06-885b-14a42eba6c6b-500x500.JPG"
+            class="card-img-top" class="card-img-top" alt="...">
+
         </div>
-        <div class="card d-none d-md-block">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+        <div class="card" style="width: 18rem;">
+          <img src="https://i.pinimg.com/736x/f3/e6/dd/f3e6dd18ed5260a56d4179d92aa2b018.jpg" class="card-img-top "
+            class="card-img-top" alt="...">
+
         </div>
       </div>
+    </div>
+    <div class="carousel-item">
+      <div class="card-wrapper container-sm d-flex  justify-content-around">
+        <div class="card " style="width: 18rem;">
+          <img src="https://www.homelane.com/blog/wp-content/uploads/2022/02/shutterstock_1482594881.jpg"
+            class="card-img-top" alt="...">
+
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img
+            src="https://i0.wp.com/www.meltingflowers.com/blogs/wp-content/uploads/2019/10/e0c923ef33c2e8bf96aed443247ae0b0.jpg?resize=570%2C428&ssl=1"
+            class="card-img-top" class="card-img-top" alt="...">
+
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="https://www.nurserydesignstudio.com/wp-content/uploads/2021/02/OUTDOOR-BABY-SHOWER-IDEAS-7.png"
+            class="card-img-top" alt="...">
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
+<br><br>
+<br>
+<h2 class="color-text about-title text-center" style="font-weight: bold;">Hear from our <i> Happy Clients</i></h2>
+<br><br>
+<div class="main">
+  <div class="profile-card">
+    <div class="img">
+      <img
+        src="https://media.istockphoto.com/id/805011976/photo/portrait-of-happy-senior-businessman.jpg?s=612x612&w=0&k=20&c=g6GT6VGANMAAu-ulo6j3BNvckcKL9AeHMsdHFsuxqTA=">
+    </div>
+    <div class="caption">
+      <h3>Dr. Ryle Kincaid</h3>
+      <p>Just Wow! Eventful is super amazing</p>
+
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+  <div class="profile-card">
+    <div class="img">
+      <img
+        src="https://1.bp.blogspot.com/-8c7QTLoyajs/YLjr2V6KYRI/AAAAAAAACO8/ViVPQpLWVM0jGh3RZhh-Ha1-1r3Oj62wQCNcBGAsYHQ/s16000/team-1-3.jpg">
+    </div>
+    <div class="caption">
+      <h3>David Corner</h3>
+      <p>Amazing team they are!</p>
+    </div>
+  </div>
+  <div class="profile-card">
+    <div class="img">
+      <img
+        src="https://1.bp.blogspot.com/-AO5j2Y9lzME/YLjr3mxiqAI/AAAAAAAACPE/KAaYYTtQTrgBE3diTbxGoc4U4fCGx-C2gCNcBGAsYHQ/s16000/team-1-4.jpg">
+    </div>
+    <div class="caption">
+      <h3>Alyssa Marshall</h3>
+      <p>They made the day memorable! Loved them!</p>
+      
+    </div>
+  </div>
+  <div class="profile-card">
+    <div class="img">
+      <img
+        src="https://1.bp.blogspot.com/-vhmWFWO2r8U/YLjr2A57toI/AAAAAAAACO4/0GBonlEZPmAiQW4uvkCTm5LvlJVd_-l_wCNcBGAsYHQ/s16000/team-1-2.jpg">
+    </div>
+    <div class="caption">
+      <h5>Mariha</h5>
+      <p>They were Amazing, Amazing & Amazing!!!</p>
+    </div>
+  </div>
+  
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+<br><br>
