--- a/src/app/book-appointment/book-appointment.component.html
+++ b/src/app/book-appointment/book-appointment.component.html
@@ -1,1 +1,77 @@
-<p>book-appointment works!</p>
+<body>
+
+<div id="container">
+    <!--This is a division tag for body container-->
+    <div id="body_header">
+      <!--This is a division tag for body header-->
+      <br>
+      <h1>Appointment Request Form</h1>
+
+    </div>
+    <form action="index.html" method="post">
+      <fieldset>
+        <legend><span class="number">1</span>Your basic details</legend>
+        <label for="name">Name: *</label>
+        <input type="text" name="user_name" placeholder="Name" required [(ngModel)]="name">
+
+        <label for="mail">Email: *</label>
+        <input type="email" name="user_email" placeholder="abc@xyz.com" required  [(ngModel)]="email">
+
+        <label for="tel">Contact Number: *</label>
+        <input type="tel" placeholder="Include country code" name="user_num" [(ngModel)]="mobile">
+
+        <label for="skype_name">Address: *</label>
+        <input type="text" name="address" placeholder="Address" pattern="[a-zA-Z0-9]+">
+
+
+      </fieldset>
+
+      <fieldset>
+        <legend><span class="number">2</span>Appointment Details</legend>
+        <label for="appointment_for">Appointment for: *</label>
+        <select id="appointment_for" name="appointment_for" required [(ngModel)]="appointment">
+          <option value="birthday">Birthday</option>
+          <option value="anniversary">Anniversary</option>
+          <option value="Baby Shower">Baby Shower</option>
+          <option value="retirement">Retirement</option>
+          <option value="Wedding">Wedding</option>
+          <option value="other">Other</option>
+        </select>
+        <label for="appointment_description">Appointment Description:</label>
+        <textarea id="appointment_description" name="appointment_description" placeholder="Describe in not more than 50 words"></textarea>
+        <label for="date">Date: *</label>
+        <input type="date" name="date" value="" required [(ngModel)]="date"/>
+        <br>
+        <label for="time">Time: *</label>
+        <input type="time" name="time" value="" required [(ngModel)]="time">
+        <br>
+        <label for="duration">How Long(Minutes) *</label>
+        <input type="radio" name="duration" value="30" checked> 30
+        <input type="radio" name="duration" value="60"> 60
+        <input type="radio" name="duration" value="90"> 90
+        <input type="radio" name="duration" value="more"> more
+      </fieldset>
+      <button class="btn btn-success" (click)="displayAppointmentReciept()">Request For Appointment</button>
+    </form><br>
+    <ng-container *ngIf="bdisplay == true; then AppointmentReciept; else noReciept;"></ng-container>
+
+    <ng-template #AppointmentReciept>
+        <div class="container text-center">
+            <h3>Appointment Reciept</h3><br>
+            <b> Dear {{name}}, <br> </b>
+            You have an appointment on <b>{{date | date }}</b>at <b>{{time}}</b> for <b>{{appointment}} event</b><br>
+            Kindly be <b>15 minutes early</b> to your appointment. <br>
+            Kindly pay <b>{{money | currency : 'INR'}}</b> before <b>{{date | date}}</b> to confirm the appointment. After which you will soon recieve a confirmation mail on you mail ID <b>{{email}}</b> and a confirmation SMS on <b>{{mobile}}</b>. <br><br>
+            You can show that mail or the SMS at the reception on {{date}} to meet us!
+            <br><br>
+            <b> SEE YOU SOON!!! </b>
+        </div>
+    </ng-template>
+    <ng-template #noReciept>
+        <div class = "container text-center">
+            When you will book an appointment your reciept will be displayed here!
+        </div>
+    </ng-template>
+  </div>
+  <br><br>
+</body>
