--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,118 +1,202 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <body>
-    
+    <br><br>
+    <div id="faq" class="justify-content-md-center row">FREQUENTLY ASKED QUESTIONS</div>
+
+    <br><br>
+
+    <div class="accordion max-width-1 m-auto" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <strong>Why we focus on theme-specific decor planning? </strong>
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Decoration for a party becomes more joyful and interesting when the setting echoes the spirit and
+                    purpose of celebration. As a reputed theme décor planner, we offer the best balloon decoration for
+                    birthday, anniversary, terrace decoration, bachelorette party and other occasions. Our sincere
+                    decoration efforts succeed in bringing to life a magical and dreamy ambience that reverberates the
+                    essence of the event.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <strong>Do we keep prices reasonable for decorating your parties?</strong>
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    What sets us apart from money-extracting party planners and decorators is our affordable price
+                    range. As
+                    a leading balloon décor company, we keep prices pocket-friendly instead of keeping them exorbitant
+                    for
+                    your optimum convenience. Your investment and faith in us will definitely show results as you
+                    discover a
+                    gorgeous party atmosphere come to life under our sharp decoration skills and aesthetic vision.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <strong>Can we help you in making last-minute arrangements?</strong>
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    We know goof-ups do happen as we all are pressed for time! So if you are a last-minute party planner
+                    and
+                    hankering for ideas or fuming as there is less time and so much to arrange, just dial us up and we
+                    are
+                    here to offer you super quick ideas and fixes offering you sameday balloon decoration services.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    <strong>Are budget balloon decoration services offered?</strong>
+                </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Why not? We know that it is not possible for everybody to indulge in making a space utterly
+                    luxurious
+                    for hosting a party/event. Just speak to us about your custom requirements with your tentative
+                    budget
+                    and we will give you a clear road map as to how we can rev up a space with our impeccable balloon
+                    decoration services well within your budget. We don’t tend to put a big hole in your pocket; we plan
+                    everything according in tune with your preference and budget.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFive">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    <strong>Do you guarantee cent percent customer satisfaction?</strong>
+                </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    With years of experience in the industry and having a huge base of clients whom we have made happy
+                    time
+                    and again for so many years, we guarantee cent percent client satisfaction. We do not believe in
+                    bragging and once you hire us and we work with you – a clear picture of our service, pricing and
+                    excellence will meet your eyes undoubtedly!
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingSix">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                    <strong> Can we arrange a Romantic Candle Light Dinner? </strong>
+                </button>
+            </h2>
+            <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    Want to enjoy a candlelight poolside dinner with your partner or spouse? To make it happen, we at
+                    Eventful, put our dedicated efforts in arranging a heavenly poolside decoration for candlelight
+                    dinners.
+                    We know the perfect tips and tricks to make a poolside setting take up an attractive appearance that
+                    speaks lovey-dovey vibes. You can count on us to provide a classy and illuminating candlelight pool
+                    party dinner decoration for you to relish a splendid feast amidst a luxurious and seductive
+                    environment.
+                    In order to ensure that love is in the air and to ensure to feel those vibes, we get you covered
+                    from
+                    every angle!
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 
 
-<br><br>
-<div id="faq" class="justify-content-md-center row">FREQUENTLY ASKED QUESTIONS</div>
+<br><br><br>
 
-<br><br>
+<div id="first-div" class="m-auto max-width-1">
+    <div id="first-left">
+        <h2 class="color-text">Have a question in mind?</h2>
+        <h3 class="color-text2">Reach us with Ease</h3><br>
+        <p>Eventful values its Customers, connect with us and we will reach out to you in your celebrations Over 1 Lacs+
+            customers trust Eventful to make their event planning a breeze.</p>
+        <br>
+        <button class="btn btn-success fa fa-whatsapp text-dark" (click) = "displayWhatsApp()">&nbsp; WhatsApp</button> &nbsp;&nbsp;&nbsp;&nbsp;
+        <button class="btn btn-primary fa fa-envelope-o text-dark" (click)="displayMail()"> &nbsp; Mail</button>&nbsp;&nbsp;&nbsp;&nbsp;
+        <button class="btn btn-warning fa fa-phone text-dark" (click)="callButton()"> &nbsp; Call</button>
+        <button class="btn btn-info fa fa-user spacing text-dark" routerLinkActive="active" routerLink="/BookAppointment" > &nbsp; Book an Appointment with us!</button>
+    </div>
 
-<div class="accordion max-width-1 m-auto" id="accordionExample">
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                <strong>Why we focus on theme-specific décor planning? </strong>
-            </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
-            data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                Decoration for a party becomes more joyful and interesting when the setting echoes the spirit and
-                purpose of celebration. As a reputed theme décor planner, we offer the best balloon decoration for
-                birthday, anniversary, terrace decoration, bachelorette party and other occasions. Our sincere
-                decoration efforts succeed in bringing to life a magical and dreamy ambience that reverberates the
-                essence of the event.
-            </div>
-        </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                <strong>Do we keep prices reasonable for decorating your parties?</strong>
-            </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-            data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                What sets us apart from money-extracting party planners and decorators is our affordable price range. As
-                a leading balloon décor company, we keep prices pocket-friendly instead of keeping them exorbitant for
-                your optimum convenience. Your investment and faith in us will definitely show results as you discover a
-                gorgeous party atmosphere come to life under our sharp decoration skills and aesthetic vision.
-            </div>
-        </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                <strong>Can we help you in making last-minute arrangements?</strong>
-            </button>
-        </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-            data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                We know goof-ups do happen as we all are pressed for time! So if you are a last-minute party planner and
-                hankering for ideas or fuming as there is less time and so much to arrange, just dial us up and we are
-                here to offer you super quick ideas and fixes offering you sameday balloon decoration services.
-            </div>
-        </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingFour">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                <strong>Are budget balloon decoration services offered?</strong>
-            </button>
-        </h2>
-        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
-            data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                Why not? We know that it is not possible for everybody to indulge in making a space utterly luxurious
-                for hosting a party/event. Just speak to us about your custom requirements with your tentative budget
-                and we will give you a clear road map as to how we can rev up a space with our impeccable balloon
-                decoration services well within your budget. We don’t tend to put a big hole in your pocket; we plan
-                everything according in tune with your preference and budget.
-            </div>
-        </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingFive">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                <strong>Do you guarantee cent percent customer satisfaction?</strong>
-            </button>
-        </h2>
-        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
-            data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                With years of experience in the industry and having a huge base of clients whom we have made happy time
-                and again for so many years, we guarantee cent percent client satisfaction. We do not believe in
-                bragging and once you hire us and we work with you – a clear picture of our service, pricing and
-                excellence will meet your eyes undoubtedly!
-            </div>
-        </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header" id="headingSix">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                <strong> Can we arrange a Romantic Candle Light Dinner? </strong>
-            </button>
-        </h2>
-        <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
-            data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                Want to enjoy a candlelight poolside dinner with your partner or spouse? To make it happen, we at
-                Eventful, put our dedicated efforts in arranging a heavenly poolside decoration for candlelight dinners.
-                We know the perfect tips and tricks to make a poolside setting take up an attractive appearance that
-                speaks lovey-dovey vibes. You can count on us to provide a classy and illuminating candlelight pool
-                party dinner decoration for you to relish a splendid feast amidst a luxurious and seductive environment.
-                In order to ensure that love is in the air and to ensure to feel those vibes, we get you covered from
-                every angle!
+   
+
+    <div id="first-right">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://c0.wallpaperflare.com/preview/785/198/362/business-office-flatlay-contact-us.jpg"
+                        class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://c0.wallpaperflare.com/preview/706/1007/780/blurred-background-cellphone-cheerful-connection.jpg"
+                        class="d-block w-100" alt="...">
+                </div>
             </div>
         </div>
     </div>
 </div>
-</body>
+<br><br><br>
+
+<ng-container *ngIf = "bWhatsApp == true; then displayWhatsAppForm; else displayMailForm"></ng-container>
+<ng-template #displayWhatsAppForm>
+    <div class="bg-wa">
+        <h1 class="h1-wa">Contact Via WhatsApp</h1>
+        <form action="">
+        <div class="left">
+        <label for="name"></label>
+        <input type="text" id="name" name="name" placeholder="Name">
+          <input type="submit" value="Send">
+        </div>
+        <div class="right">
+          <label for="phone"></label>
+          <br>
+          <input type="text" name="phone" id="phone" autocomplete="on" placeholder="WhatsApp Number">
+          <textarea rows="2" placeholder="Leave a message..."></textarea>
+        </div>
+          </form>
+      </div>
+</ng-template>
+<ng-template #displayMailForm>
+    <div class="bg-mail">
+        <h1 class="h1-mail">Contact Via Mail</h1>
+        <form action="">
+        <div class="left">
+        <label for="name"></label>
+        <input type="text" id="name" name="name" placeholder="Name">
+          <input type="submit" value="Send">
+        </div>
+        <div class="right">
+          <label for="phone"></label>
+          <br>
+          <input type="email" name="mail" id="mail" autocomplete="on" placeholder="Mail ID">
+          <textarea rows="2" placeholder="Leave a message..."></textarea>
+        </div>
+          </form>
+      </div>
+</ng-template>
+<br><br>
