--- a/src/app/no-page-found/no-page-found.component.html
+++ b/src/app/no-page-found/no-page-found.component.html
@@ -1,1 +1,5 @@
-<p>no-page-found works!</p>
+<div class="image">
+</div>
+<h3 class="text-center">To go to Home Page</h3><br>
+<button class="btn btn-primary btn-margin" routerLinkActive="active" routerLink="/Services">Click Here</button>
+<br><br>
